[package]
name = "graphql"
version = "0.0.0"
authors = ["Dan Steren <daniel.d.steren@gmail.com>"]
edition = "2018"

[lib]
path = "src/graphql.rs"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sudograph = "0.2.0-beta.0"
